# rust-multithrading

folder1/foldere1/: Cargo.toml
folder1/foldere1/src/: main.rs
folder2/: Cargo.toml
folder2/src/: main.rs
tokio_test/: Cargo.toml
tokio_test/src/: main.rs
