[package]
name = "tokio_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
# tokio = { version = "1", features = ["full"] }
tokio = { version = "1",  default-features = false, features = ["rt", "time", "io-util", "macros"] }
